fix: light theme flickering

--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -25,7 +25,7 @@ body {
   --blue-link: #59acff;
 }
 
-body.light {
+html[data-theme="light"] {
   --bg-color: #fff;
   --border-color: #dedede;
   --border-extra: #dedede;
